<resources>
    <string name="app_name">korom</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="maintext">Please log in or register to use our services!</string>
    <string name="register">Register</string>
    <string name="password_again">password again</string>
    <string name="email">email</string>
    <string name="login_with_google">Login with Google</string>
    <string name="title_activity_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="addcomment">Add comment</string>
    <string name="write_your_comment_here">Write your comment here...</string>
    <string name="cancel">Cancel</string>
    <string name="book_new_appointment">Book new appointment</string>
    <string name="welcome">Welcome</string>
    <string name="edit">Edit</string>
    <string name="my_comments">My comments</string>
    <string name="other_comments">Other comments</string>
</resources>